# proof-of-work

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  self-check.yml
plan/: about-this-project.md  tech-stack-and-requirements.md
plan/html-files/: proof-of-work-deep-dive.html  tech-stack-and-requirements.html
proofofwork/: __init__.py  engine.py  types.py
proofofwork/core/: gitdiff.py  mutation.py  runner.py
proofofwork/core/detector/: __init__.py  asserts.py  coverage_delta.py  fake_pass.py  learned.py  mocks.py  tests_integrity.py
proofofwork/core/sandbox/: __init__.py  local.py
proofofwork/interfaces/: action.yml  cli.py  precommit.py
proofofwork/judge/: __init__.py  judge.py
proofofwork/learn/: __init__.py  corpus.py  gate.py  loop.py  propose.py
proofofwork/learn/corpora/cheats/: module_skip.diff  sys_exit_fake.diff
proofofwork/learn/corpora/clean/: add_feature.diff  fix_expected.diff
proofofwork/log/: __init__.py  envelope.py  store.py
proofofwork/rules/: __init__.py  learned.json
tests/: test_cli.py  test_detector.py  test_learn.py  test_log.py  test_runner.py
