[project]
name = "proof-of-work"
version = "0.1.0"
description = "Catch AI coding agents cheating on their work — verdict on facts, not opinions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "cryptography>=42",  # Ed25519 signing of the tamper-evident log head
]
# ponytail: no tree-sitter dep — every detector check is regex/stdlib-ast based. Add a
# grammar dep only when a check actually needs a parse tree (deeper JS/TS semantics, v2).

[project.optional-dependencies]
judge = ["anthropic>=0.40"]          # Layer 2 advisory judge, bring-your-own-key
dev = ["pytest>=8"]

[project.scripts]
proof-of-work = "proofofwork.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proofofwork"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
